<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>conveyor_interface</name>
  <version>5.0.0</version>
  <description>Provides an interface for dealing with conveyors</description>
  <maintainer email="e.rey-coquais@niryo.com">Etienne Rey-Coquais</maintainer>

  <license>GPLv3</license>
  <author>Etienne Rey-Coquais</author>
  <author>Edouard Renard</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>niryo_robot_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>niryo_robot_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
