<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>end_effector_interface</name>
  <version>5.0.0</version>
  <description>Provides an interface to manage the end effector of the robot</description>
  <maintainer email="c.cocquempot@niryo.com">Clément Cocquempot</maintainer>

  <license>GPLv3</license>
  <author>Clément Cocquempot</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>niryo_robot_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>niryo_robot_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>niryo_robot_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
