<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ttl_driver</name>
  <version>5.0.0</version>
  <description>Provides an interface bewteen high level ROS packages and motors on TTL bus</description>
  <maintainer email="c.cocquempot@niryo.com">Clement Cocquempot</maintainer>

  <license>GPLv3</license>
  <author>Clement Cocquempot</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>niryo_robot_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>niryo_robot_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>niryo_robot_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
