<?xml version="1.0"?>
<package format="3">
  <name>niryo_robot_database</name>
  <version>5.0.0</version>
  <description>
    Handles sqlite database for the cloud
  </description>

  <maintainer email="j.mottier@niryo.com">Justin Mottier</maintainer>
  <license>GPLv3</license>
  <author email="j.mottier@niryo.com">Justin Mottier</author>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Additional information -->
  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
  </export>
</package>